Refactor: delete jquery for bootstrap

--- a/board-service/src/main/resources/static/index.html
+++ b/board-service/src/main/resources/static/index.html
@@ -14,8 +14,8 @@
   <button type="button" class="btn btn-warning">버튼2</button>
   <button type="button" class="btn btn-info">버튼2</button>
   <button type="button" class="btn btn-danger">버튼2</button>
+  <h1>hello world</h1>
 
-<script sr="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script type="text/javascript" src="js/bootstrap.js"></script>
+<script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
